--- a/i3/status-work.conf
+++ b/i3/status-work.conf
@@ -11,7 +11,8 @@ order += "ethernet enp0s25"
 order += "battery 0"
 order += "volume master"
 order += "load"
-order += "time"
+order += "tztime utc"
+order += "tztime vno"
 
 wireless wlp3s0 {
     format_up = "W: (%quality at %essid) %ip"
@@ -32,8 +33,24 @@ run_watch VPN {
     pidfile = "/var/run/openvpn.pid"
 }
 
-time {
-    format = "%Y-%m-%d %H:%M:%S"
+tztime vno {
+    format = "VNO: %Y-%m-%d %H:%M:%S"
+    timezone = "Europe/Vilnius"
+}
+
+tztime utc {
+    format = "UTC: %Y-%m-%d %H:%M:%S"
+    timezone = "Etc/UTC"
+}
+
+tztime nyc {
+    format = "NYC: %Y-%m-%d %H:%M:%S"
+    timezone = "US/Eastern"
+}
+
+tztime sfo {
+    format = "SFO: %Y-%m-%d %H:%M:%S"
+    timezone = "US/Pacific"
 }
 
 load {
